finished the UI for the mobile design

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="first__section">
             <h5>100K PAGEVIEWS</h5>
             <div class="slidercontainer">
-              <input type="range" name="price slider" id="slider" min="5" max="50" class="slider">
+              <input type="range" name="price slider" id="slider" min="5" max="50" class="range__slider">
             </div>
             <div class="display__price">
               <h1>$ 16.00</h1>
@@ -46,9 +46,9 @@
               <div class="monthly">Monthly Billing</div>
               <div class="toggle__switch">
                 <label class="switch">
-                <input type="checkbox">
-                <span class="slider round"></span>
-                </label>
+                  <input type="checkbox" id="toggleSwitch">
+                  <span class="slider"></span>
+                </label>                
               </div>
               <div class="yearly"><p>yearly Billing</p><span>-25%</span></div>
             </div>
@@ -88,9 +88,11 @@
 
   Start my trial
    -->
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+   <footer>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#"><p>Soulbroda</p></a>.
+    </div>
+  </footer>
 </body>
 </html>
