--- a/index.html
+++ b/index.html
@@ -34,8 +34,14 @@
 
         <section class="pricing__component">
           <div class="first__section">
+            <div class="views">
+              <h5 class="numberviews">100K PAGEVIEWS</h5>
+              <div class="the__amount">
+              <h1 class="display__amount">0.00</h1>
+              <p>/ month</p>
+            </div>
+            </div>
             
-            <h5>100K PAGEVIEWS</h5>
             
             <div class="slidercontainer">
               <input type="range" name="price slider" id="slider" min="0" max="32" step="1" class="range__slider">
@@ -53,7 +59,7 @@
                   <span class="slider"></span>
                 </label>                
               </div>
-              <div class="yearly"><p>yearly Billing</p><span>-25%</span></div>
+              <div class="yearly"><p>yearly Billing</p><span class="discount">-25%</span></div>
             </div>
           </div>
           <div class="second__section">
