--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             <div class="views">
               <h5 class="numberviews">100K PAGEVIEWS</h5>
               <div class="the__amount">
-              <h1 class="display__amount">0.00</h1>
-              <p>/ month</p>
+              <h1 class="display__amount second" >0.00</h1>
+              <p class="year">/ month</p>
             </div>
             </div>
             
@@ -48,7 +48,7 @@
             </div>
             <div class="display__price">
               <h1 class="display__amount">0.00</h1>
-              <p>/ month</p>
+              <p class="year yearTwo">/ month</p>
             </div>
            
             <div class="toggle__time">
